compilers-master/bug_project/Grammar.txt
STATEMENT_SEQUENCE -> SENTENCE STATEMENT_SEQUENCE
STATEMENT_SEQUENCE -> ' '
SENTENCE -> var ID ;
SENTENCE -> ID = EXPRESSION ;
SENTENCE -> print ( DISPLAY_LIST ) ;
SENTENCE -> while ( EBOOL ) SENTENCE
SENTENCE -> { STATEMENT_SEQUENCE }
SENTENCE -> if ( EBOOL ) SENTENCE REST_IF
REST_IF -> else SENTENCE
REST_IF -> ' '
EXPRESSION -> TERM EPRIME
EPRIME -> + TERM EPRIME
EPRIME -> - TERM EPRIME
EPRIME -> ' '
TERM -> FACTOR TPRIME
TPRIME -> * FACTOR TPRIME
TPRIME -> / FACTOR TPRIME
TPRIME -> ' '
FACTOR -> ID
FACTOR -> NUMBER
FACTOR -> STRING
FACTOR -> ( EXPRESSION )
EBOOL -> EXPRESSION == EXPRESSION
EBOOL -> EXPRESSION >= EXPRESSION
EBOOL -> EXPRESSION <= EXPRESSION
EBOOL -> EXPRESSION != EXPRESSION
EBOOL -> EXPRESSION < EXPRESSION
EBOOL -> EXPRESSION > EXPRESSION
EBOOL -> TRUE
EBOOL -> FALSE
DISPLAY_LIST -> ELEMENT ELEMENT_SEQUENCE
DISPLAY_LIST -> ' '
ELEMENT_SEQUENCE -> , ELEMENT ELEMENT_SEQUENCE
ELEMENT_SEQUENCE -> ' '
ELEMENT -> ID
ELEMENT -> NUMBER
ELEMENT -> STRING

ID -> CHARACTER (CHARACTER || DIGIT)*
NUMBER -> DIGIT (DIGIT)*
STRING -> " ANY_CHARACTER* "
TRUE -> '#t'
FALSE -> '#f'
